# Django-Web-App-for-SweBench-Evaluation

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: django-tests.yml  main.yml
django_project/: settings.py  urls.py
django_venv/: pyvenv.cfg
django_venv/Scripts/: activate  activate.bat
swe_api/: apps.py  tests.py  urls.py  views.py
